# loremesh

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  clippy.toml  deny.toml  justfile
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: architecture.yml  bug.yml  feature.yml
.github/workflows/: ci.yml  docs.yml  security.yml
crates/loremesh/: Cargo.toml
crates/loremesh-core/: Cargo.toml
crates/loremesh-core/src/: corpus.rs  index.rs  investigation.rs  lib.rs  relationship.rs
crates/loremesh-report/: Cargo.toml
crates/loremesh-report/src/: lib.rs
crates/loremesh-storage/: Cargo.toml
crates/loremesh-storage/src/: corpus.rs  lexical.rs  lib.rs
crates/loremesh-storage/tests/: corpus_lifecycle.rs
crates/loremesh-tui/: Cargo.toml
crates/loremesh-tui/src/: browser.rs  chart.rs  grid.rs  lib.rs  markdown.rs  theme.rs
crates/loremesh/src/: main.rs  workbench.rs
crates/loremesh/tests/: cli.rs
docs/adr/: 0001-modular-monolith.md  0002-rust-workspace.md  0003-filesystem-plus-sqlite.md  0004-ports-and-adapters.md  0005-subprocess-engine-protocol.md  0006-dual-license.md  0007-workbench-shell.md  0008-local-tool-execution.md  0009-persistent-pty-shell.md  0010-canonical-corpus-and-derived-indexes.md  README.md
docs/architecture/: code-structure-and-rendering.md  components.md  context.md  data-model.md  dependency-rules.md  feedback-model.md  indexing.md  overview.md  security-and-privacy.md  source-lineage.md  testing-strategy.md
docs/product/: roadmap.md  scope.md  terminology.md  vision.md
docs/specs/: README.md  artifact-and-evidence-model.md  code-and-markdown-browser.md  corpus-manifest.md  data-workbench.md  feedback-scopes.md  interactive-workbench-shell.md  investigation-workbench.md  knowledge-corpus.md  lexical-index.md  report-model.md  test-corpora.md  trace-model.md  workspace-foundation.md
fixtures/demo/: report.html  report.md  sample.md
scripts/: check-architecture.sh
tests/fixtures/knowledge-base/: corpus.json
tests/fixtures/knowledge-base/code/sample-service/: Cargo.toml
tests/fixtures/knowledge-base/code/sample-service/src/: audit.rs  config.rs  lib.rs  retry.rs  rollout.rs
tests/fixtures/knowledge-base/corpus/architecture/: component-map.md  failure-isolation.md  processing-lineage.md  storage-boundary.md
tests/fixtures/knowledge-base/corpus/feature-studies/: adaptive-retry.md  audit-stream.md  config-validation.md  safe-rollout.md
tests/fixtures/knowledge-base/corpus/interface-specs/: config-schema.md  event-schema.md  health-api.md  relay-api.md
tests/fixtures/knowledge-base/corpus/product-docs/: code-spec.md  deployment-guide.md  operator-guide.md  ownership-guide.md  performance-study.md  release-note.md  security-analysis.md  troubleshooting.md
tests/fixtures/knowledge-base/expected/: diagnostics.json  lineage.json  relationships.json
tests/fixtures/knowledge-base/issues/: issue-001.md  issue-002.md  issue-003.md  issue-004.md  issue-005.md  issue-006.md  issue-007.md  issue-008.md  issue-009.md  issue-010.md  issue-011.md  issue-012.md  issue-013.md  issue-014.md  issue-015.md  issue-016.md  issue-017.md  issue-018.md  issue-019.md  issue-020.md  issue-021.md  issue-022.md  issue-023.md  issue-024.md  issue-025.md  issue-026.md  issue-027.md  issue-028.md  issue-029.md  issue-030.md
tests/fixtures/knowledge-base/metadata/: LICENSES.md
tools/corpus-generator/: Cargo.toml
tools/corpus-generator/src/: main.rs
tools/public-corpus-builder/: Cargo.toml
tools/public-corpus-builder/profiles/: kubernetes-feature-sample.json
tools/public-corpus-builder/src/: main.rs
