[workspace]
members = [
    "crates/loremesh-core",
    "crates/loremesh-storage",
    "crates/loremesh-report",
    "crates/loremesh-tui",
    "crates/loremesh",
    "tools/public-corpus-builder",
    "tools/corpus-generator",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.97.1"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Ritevista/loremesh"

[workspace.dependencies]
anyhow = "1.0.98"
assert_cmd = "2.0.17"
clap = { version = "4.5.40", features = ["derive"] }
crossterm = "0.29.0"
csv = "1.3.1"
hex = "0.4.3"
predicates = "3.1.3"
portable-pty = "0.9.0"
proptest = "1.6.0"
ratatui = "0.30.2"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tempfile = "3.20.0"
tantivy = "0.26.1"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }

[workspace.lints.rust]
unsafe_code = "forbid"
# Public APIs are documented selectively during the pre-stable foundation; rustdoc
# warnings remain denied in CI, and full missing-doc enforcement is deferred to v1.
missing_docs = "allow"
unused_qualifications = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = "thin"
strip = "symbols"
