[package]
name = "loremesh-report"
description = "Renderer-independent reports and deterministic exporters for LoreMesh"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
csv.workspace = true
loremesh-core = { version = "0.1.0", path = "../loremesh-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
