[package]
name = "loremesh-storage"
description = "Filesystem and SQLite persistence adapters for LoreMesh"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hex.workspace = true
loremesh-core = { version = "0.1.0", path = "../loremesh-core" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tantivy.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
