[package]
name = "loremesh-tui"
description = "Terminal presentation for LoreMesh"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
crossterm.workspace = true
loremesh-core = { version = "0.1.0", path = "../loremesh-core" }
ratatui.workspace = true
thiserror.workspace = true

[lints]
workspace = true

[dev-dependencies]
proptest.workspace = true
