[package]
name = "loremesh"
description = "Local-first engineering knowledge and investigation workbench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "loremesh"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
loremesh-core = { version = "0.1.0", path = "../loremesh-core" }
loremesh-report = { version = "0.1.0", path = "../loremesh-report" }
loremesh-storage = { version = "0.1.0", path = "../loremesh-storage" }
loremesh-tui = { version = "0.1.0", path = "../loremesh-tui" }
portable-pty.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
serde_json.workspace = true
tempfile.workspace = true

[lints]
workspace = true
